css: fix events list on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -162,6 +162,13 @@ main {
       }
     }
   }
+  .past {
+    text-overflow: ellipsis;
+    max-width: 100%;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+  }
   h4 {
     font-size: 1.75rem;
   }
